# land-and-bay-stewards

./: .dockerignore  .env.example  .gitignore  .prettierignore  .tflint.hcl  AGENTS.md  DEPLOY_TO_ECS.md  Dockerfile  HEALTH_ENDPOINTS.md  README.md  docker-compose.yml  entrypoint.sh  init-db.sh  mkdocs.yml  nginx.dev.conf
backend/: API.md  CONTENT_MANAGEMENT.md  README.md  healthcheck.py  manage.py  pyproject.toml
backend/api/: campaigns.py  endorsers.py  legislators.py  tests.py
backend/campaigns/migrations/: 0001_initial.py
backend/coalition/api/: api.py  campaigns.py  endorsements.py  homepage.py  legislators.py  schemas.py  stakeholders.py  tests.py
backend/coalition/campaigns/: admin.py  apps.py
backend/coalition/core/: admin.py  apps.py  asgi.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
backend/coalition/endorsements/: apps.py  models.py  tests.py
backend/coalition/legislators/: admin.py  apps.py  models.py
backend/coalition/regions/: admin.py  apps.py
backend/coalition/stakeholders/: admin.py  apps.py  models.py  tests.py
backend/coalitionbuilder/api/: api.py  campaigns.py  endorsements.py  legislators.py  schemas.py  stakeholders.py
backend/coalitionbuilder/core/: settings.py  urls.py
backend/coalitionbuilder/endorsements/: models.py  tests.py
backend/coalitionbuilder/regions/: models.py
backend/endorsers/: apps.py
backend/endorsers/migrations/: 0001_initial.py
backend/labs/: __init__.py
backend/labs/api/: api.py  campaigns.py  endorsers.py  legislators.py  schemas.py
backend/labs/campaigns/: __init__.py  apps.py
backend/labs/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/labs/endorsers/: apps.py
backend/labs/legislators/: apps.py
backend/labs/regions/: apps.py
backend/labs_project/: asgi.py  manage.py  render.yaml  settings.py  tests.py  urls.py  views.py  wsgi.py
backend/landandbay/api/: api.py  (+5 more)
backend/legislators/: apps.py  models.py
backend/sample_data/: fixtures.json
backend/scripts/: cleanup_aws.sh  create_test_data.py  lint.py  lint.sh
backend/static/: robots.txt
backend/templates/: index.html
(+179 files in other folders)
